2013-12-23  Carl Hetherington  <cth@carlh.net>

	* Add top/bottom option for 3D frames.

2013-12-20  Carl Hetherington  <cth@carlh.net>

	* Add configuration option for default audio delay (#276).

	* Version 1.46 released.

2013-12-19  Carl Hetherington  <cth@carlh.net>

	* Version 1.45 released.

2013-12-19  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp version again for a crash fix for 32-bit Windows,
	and also for problems generating certificate chains.

2013-12-18  Carl Hetherington  <cth@carlh.net>

	* Version 1.44 released.

2013-12-18  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp version again for a fix to XML validity for 3D.

	* Version 1.43 released.

2013-12-18  Carl Hetherington  <cth@carlh.net>

	* Update libdcp version to get fix for 3D IntrinsicDuration.

	* Fix progress reporting when making 3D DCPs.

	* Fix non-update of display when changing video frame type (2D,
	3D left/right etc.)

	* Restore video information in video tab when using still images.

	* Hopefully fix exception on new film in some strange cases.

2013-12-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.42 released.

2013-12-09  Carl Hetherington  <cth@carlh.net>

	* Fix make_black for pixel format 7 (#288).

2013-12-08  Carl Hetherington  <cth@carlh.net>

	* Fix display update when removing content (#281).

2013-12-07  Carl Hetherington  <cth@carlh.net>

	* Version 1.41 released.

2013-12-05  Carl Hetherington  <cth@carlh.net>

	* Improve the correctness of lengths reported by sound files to fix
	short DCPs when using non-DCI-rate sound files with stills.

2013-12-04  Carl Hetherington  <cth@carlh.net>

	* Make signatures optional (#273).

	* Only do scale/crop/window/subtitle overlay if a frame is going
	to be encoded for the DCP.

	* Several optimisations to video processing, which should
	speed up the player a bit.

2013-12-03  Carl Hetherington  <cth@carlh.net>

	* Add "play length" control to avoid having to do arithmetic to